--- a/search/search.css
+++ b/search/search.css
@@ -65,23 +65,27 @@ svg {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9;
 }
+/* Search-box */
 .top-menu .search-box {
   position: relative;
   display: flex;
   justify-content: center;
   top: 60px;
   width: 100%;
-  height: 500px;
+  height: 800px;
   background-color: black;
+  flex-direction: column;
 }
-/* Search-box */
 .search-box .inner {
   position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width:  1100px;
-  height: 500px;
+  height: 100px;
   background-color: black;
+  margin: 0 auto;
 }
 .top-menu.open {
   display: block;
@@ -143,9 +147,14 @@ svg {
 }
 .swiper-container {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  overflow: hidden;
+}
+.swiper-container {
+  display: flex;
 }
 .swiper-slide {
+  flex: 0 0 auto;
   text-align: center;
   display: flex;
   justify-content: center;
