--- a/recommendation/slide-feature.css
+++ b/recommendation/slide-feature.css
@@ -47,3 +47,93 @@
 .carousel-indicators .active {
     background-color: #fff;
 }
+
+
+
+/* js 여기서 부터 아래표시까지 가져가기 */
+.movie-list-container {
+    padding: 0 20px;
+  }
+  
+  .movie-list-wrapper {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  /* movie display: flex */
+
+  
+  .movie-list {
+    display: flex;
+    align-items: center;
+    height: 300px;
+    transform: translateX(0);
+    transition: all 1s ease-in-out;
+  }
+  
+  .movie-list-item {
+    margin-right: 30px;
+    position: relative;
+    transition: transform 1s ease;
+  }
+  
+  .movie-list-item:hover .movie-list-item-img {
+
+    position: relative;
+    bottom: 10px;
+    /* transform: translateY(-10px); */
+    /* transform: scale(1.2);  */
+    /* margin: 0 30px;
+    opacity: 0.5;  */
+  }
+  
+  /* .movie-list-item:hover .movie-list-item-title,
+  .movie-list-item:hover .movie-list-item-desc,
+  .movie-list-item:hover .movie-list-item-button {
+    opacity: 1;
+  } */
+  
+
+  /* popular image size */
+  .movie-list-item-img {
+    transition: all 1s ease-in-out;
+    width: 200px;
+    height: 270px;
+    object-fit: cover;
+    border-radius: 20px;
+  } 
+   
+  .arrow-left {
+    font-size: 120px;
+    position: absolute;
+    top: 90px;
+    left: 0;
+    color: lightgray;
+    opacity: 0.5;
+    cursor: pointer;
+    z-index: 3
+  }
+  
+  
+  .arrow-right {
+    font-size: 120px;
+    position: absolute;
+    top: 90px;
+    right: 0;
+    color: lightgray;
+    opacity: 0.5;
+    cursor: pointer;
+  }
+  /* 여기까지 가겨감 */
+
+  /* .movie-list-item-title {
+    background-color: #333;
+    padding: 0 10px;
+    font-size: 32px;
+    font-weight: bold;
+    position: absolute;
+    top: 10%;
+    left: 50px;
+    opacity: 0;
+    transition: 1s all ease-in-out;
+  } */
