--- a/recommendation/slide-feature.css
+++ b/recommendation/slide-feature.css
@@ -1,4 +1,6 @@
-
+body{
+  background-color: black;
+}
 .popular-img {
     position:relative;
     max-height: 80vh;
@@ -69,6 +71,7 @@
     height: 300px;
     transform: translateX(0);
     transition: all 1s ease-in-out;
+    position: relative;
   }
   
   .movie-list-item {
@@ -106,23 +109,25 @@
   .arrow-left {
     font-size: 120px;
     position: absolute;
-    top: 90px;
+    top: 50px;
     left: 0;
-    color: lightgray;
+    color: white;
     opacity: 0.5;
     cursor: pointer;
     z-index: 3
+    
   }
   
   
   .arrow-right {
     font-size: 120px;
     position: absolute;
-    top: 90px;
+    top: 50px;
     right: 0;
-    color: lightgray;
+    color: white;
     opacity: 0.5;
     cursor: pointer;
+    background-color: none;
   }
   /* 여기까지 가겨감 */
 
