--- a/recommendation/slide-feature.css
+++ b/recommendation/slide-feature.css
@@ -1,144 +1,117 @@
-body{
+body {
   background-color: black;
+  color: white;
 }
+
 .popular-img {
-    position:relative;
-    max-height: 80vh;
+  position: relative;
+  max-height: 80vh;
 }
-/* .popular-img img {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100vh;
-    display:flex;
-    justify-content: center;
-} */
 
 .inner-title {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100vh;
-    display:flex;
-    justify-content: center;
-    color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vh;
+  display: flex;
+  justify-content: center;
+  color: white;
 }
 
 .inner-title h2 {
-    font-size: 4vw;
-    padding: auto;
+  font-size: 4vw;
+  padding: auto;
 }
+
 .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    top: 0;
-    right: 0;   
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  right: 0;
 }
 
 .carousel-indicators [data-bs-target] {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: gray;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: gray;
 }
 
 .carousel-indicators .active {
-    background-color: #fff;
+  background-color: #fff;
 }
 
-
-
-/* js 여기서 부터 아래표시까지 가져가기 */
 .movie-list-container {
-    padding: 0 20px;
-  }
-  
-  .movie-list-wrapper {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  /* movie display: flex */
+  margin-top: 30px;
+  padding: 0 20px;
 
-  
-  .movie-list {
-    display: flex;
-    align-items: center;
-    height: 300px;
-    transform: translateX(0);
-    transition: all 1s ease-in-out;
-    position: relative;
-  }
-  
-  .movie-list-item {
-    margin-right: 30px;
-    position: relative;
-    transition: transform 1s ease;
-  }
-  
-  .movie-list-item:hover .movie-list-item-img {
+}
 
-    position: relative;
-    bottom: 10px;
-    /* transform: translateY(-10px); */
-    /* transform: scale(1.2);  */
-    /* margin: 0 30px;
-    opacity: 0.5;  */
-  }
-  
-  /* .movie-list-item:hover .movie-list-item-title,
-  .movie-list-item:hover .movie-list-item-desc,
-  .movie-list-item:hover .movie-list-item-button {
-    opacity: 1;
-  } */
-  
+.movie-list-wrapper {
+  position: relative;
+  overflow: hidden;
+}
 
-  /* popular image size */
-  .movie-list-item-img {
-    transition: all 1s ease-in-out;
-    width: 200px;
-    height: 270px;
-    object-fit: cover;
-    border-radius: 20px;
-  } 
-   
-  .arrow-left {
-    font-size: 120px;
-    position: absolute;
-    top: 50px;
-    left: 0;
-    color: white;
-    opacity: 0.5;
-    cursor: pointer;
-    z-index: 3
-    
-  }
-  
-  
-  .arrow-right {
-    font-size: 120px;
-    position: absolute;
-    top: 50px;
-    right: 0;
-    color: white;
-    opacity: 0.5;
-    cursor: pointer;
-    background-color: none;
-  }
-  /* 여기까지 가겨감 */
+.movie-list, .now-playing-movie-list, .trending-movie-list {
+  display: flex;
+  align-items: center;
+  height: 300px;
+  transform: translateX(0);
+  transition: all 1s ease-in-out;
+  position: relative;
+}
 
-  /* .movie-list-item-title {
-    background-color: #333;
-    padding: 0 10px;
-    font-size: 32px;
-    font-weight: bold;
-    position: absolute;
-    top: 10%;
-    left: 50px;
-    opacity: 0;
-    transition: 1s all ease-in-out;
-  } */
+.movie-list-item {
+  margin-right: 30px;
+  position: relative;
+  transition: transform 1s ease;
+}
+
+/* .now-playing-movie-list {
+  margin-right: 30px;
+  position: absolute;
+  left: 0;
+  top: 200px;
+  transition: transform 1s ease;
+} */
+
+.movie-list-item:hover .movie-list-item-img {
+  position: relative;
+  bottom: 10px;
+}
+
+.movie-list-item-img {
+  transition: all 1s ease-in-out;
+  width: 200px;
+  height: 270px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.arrow-left {
+  font-size: 120px;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  color: white;
+  opacity: 0.5;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.arrow-right {
+  font-size: 120px;
+  position: absolute;
+  top: 50px;
+  right: 0;
+  color: white;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.movie-list-title {
+  margin-top: 50px;
+}
