arrow button fixed with object commit 07-18-2024 at 4:55 pm

--- a/recommendation/slide-feature.css
+++ b/recommendation/slide-feature.css
@@ -55,7 +55,7 @@ body {
   overflow: hidden;
 }
 
-.movie-list, .now-playing-movie-list, .trending-movie-list {
+.popular-movie-list, .now-playing-movie-list, .trending-movie-list {
   display: flex;
   align-items: center;
   height: 300px;
