--- a/search/search.css
+++ b/search/search.css
@@ -217,7 +217,7 @@ h2 {
   background-color: black;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   margin: 100px auto;
 }
