--- a/search/search.css
+++ b/search/search.css
@@ -137,7 +137,7 @@ svg {
   margin-left: 10px;
 }
 
-/* hide-- */
+/* Movie list */
 .movies-container { 
   display: flex;
   align-items: center;
@@ -167,7 +167,6 @@ h2 {
 }
 .swiper-container {
   width: 100%;
-  /* height: 100%; */
   overflow: hidden;
 }
 .swiper-container {
@@ -211,7 +210,7 @@ h2 {
   margin-left: -650px;
 }
 
-/* main */
+/* Main */
 .movie-container {
   width: 1400px;
   background-color: black;
