--- a/recommendation/slide-feature.css
+++ b/recommendation/slide-feature.css
@@ -52,7 +52,7 @@
   overflow: hidden;
 }
 
-.popular-movie-list, .now-playing-movie-list, .trending-movie-list {
+.popular-movie-list, .now-playing-movie-list, .trending-movie-list, .upcoming-movie-list, .topRated-movie-list {
   display: flex;
   align-items: center;
   height: 300px;
@@ -111,4 +111,63 @@
 
 .movie-list-title {
   margin-top: 50px;
+  cursor: pointer;
 }
+
+
+
+
+/* Toggle temp */
+
+/* body {
+  background-color: black;
+} */
+
+
+/* .navbar {
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  position: sticky;
+  top: 0;
+}
+
+.navbar-container {
+  display: flex;
+  align-items: center;
+  padding: 0 50px;
+  height: 100%;
+  color: white;
+  font-family: "Sen", sans-serif;
+}
+
+
+.toggle {
+  width: 40px;
+  height: 20px;
+  background-color: white;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+}
+.toggle-icon {
+  color: goldenrod;
+}
+
+.toggle-ball {
+  width: 18px;
+  height: 18px;
+  background-color: black;
+  position: absolute;
+  right: 1px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: 1s ease all;
+}
+
+.movie-list-container h1 {
+  color: white;
+} */
+
