--- a/recommendation/slide-feature.css
+++ b/recommendation/slide-feature.css
@@ -1,5 +1,17 @@
 
 
+.logo {
+  text-decoration: none;
+  color: #e50914;
+  font-size: 2.5rem;
+  font-family: inherit;
+  font-weight:bold ;
+  margin-top: 0px;
+  margin-right: 30px;
+  position: relative;
+  top: -4px;
+}
+
 .popular-img {
   position: relative;
   max-height: 80vh;
@@ -44,7 +56,10 @@
 .movie-list-container {
   margin-top: 30px;
   padding: 0 20px;
+}
 
+.movie-list-container h1{
+  color: white;
 }
 
 .movie-list-wrapper {
