--- a/recommendation/slide-feature.css
+++ b/recommendation/slide-feature.css
@@ -1,20 +1,26 @@
-
+body {
+  margin: 0;
+}
 
 .logo {
   text-decoration: none;
   color: #e50914;
   font-size: 2.5rem;
   font-family: inherit;
-  font-weight:bold ;
+  font-weight: bold;
   margin-top: 0px;
   margin-right: 30px;
   position: relative;
   top: -4px;
 }
 
-.popular-img {
+.popular-img-carousel {
   position: relative;
   max-height: 80vh;
+}
+
+.carousel-window {
+  margin-top: -90px;
 }
 
 .inner-title {
@@ -58,7 +64,7 @@
   padding: 0 20px;
 }
 
-.movie-list-container h1{
+.movie-list-container h1 {
   color: white;
 }
 
@@ -67,7 +73,11 @@
   overflow: hidden;
 }
 
-.popular-movie-list, .now-playing-movie-list, .trending-movie-list, .upcoming-movie-list, .topRated-movie-list {
+.popular-movie-list,
+.now-playing-movie-list,
+.trending-movie-list,
+.upcoming-movie-list,
+.topRated-movie-list {
   display: flex;
   align-items: center;
   height: 300px;
@@ -93,6 +103,8 @@
 .movie-list-item:hover .movie-list-item-img {
   position: relative;
   bottom: 10px;
+  cursor: pointer;
+
 }
 
 .movie-list-item-img {
@@ -186,3 +198,10 @@
   color: white;
 } */
 
+/* 이희정님 파트 ccs 추가 */
+
+.main-movie-board {
+  display: flex;
+  justify-content: space-around;
+  /* margin-top: 50px; */
+}
