--- a/search/search.css
+++ b/search/search.css
@@ -139,14 +139,15 @@ svg {
 }
 
 /* Movie list */
-.movies-container {
+/* .movies-container {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-wrap: nowrap;
   margin-top: 100px;
   padding: 0;
-}
+} */
+
 .movie {
   display: flex;
   justify-content: center;
@@ -183,7 +184,7 @@ h2 {
   display: flex;
   flex: 0 0 auto;
   text-align: center;
-  display: flex;
+  /* display: flex; */  /* flex를 두번하셨네요 */
   justify-content: center;
   align-items: center;
 }
@@ -216,9 +217,10 @@ h2 {
   background-color: black;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-around;  /* flex-start to space-around 바꿔서 반응형으로 만들어 보았습니다.
+  /* justify-content: flex-start; */
   align-items: center;
-  margin: 100px auto;
+  margin: 100px auto 100px; 
 }
 .movie-container img {
   width: auto;
