--- a/detail/detail.css
+++ b/detail/detail.css
@@ -104,14 +104,17 @@ h1 {
 
 .videos {
   padding: 20px;
-  border-top: 2px solid #555;
 }
 
 .videos,
-.similar-movies,
 .reviews,
 .cast {
   padding: 20px;
+}
+
+.similar-movies {
+  padding: 20px;
+  border-top: 2px solid #555;
 }
 
 .videos h2,
@@ -194,6 +197,7 @@ footer {
   color: #888;
   padding: 20px;
   text-align: left;
+  margin-top: 30px;
 }
 
 .footer-top {
@@ -345,5 +349,57 @@ footer {
   .social-icons img {
     width: 20px;
     height: 20px;
+  }
+}
+
+/* 슬라이드 스타일 */
+.slider-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 280px;
+}
+
+.slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  will-change: transform;
+}
+
+.similar-movie {
+  flex: 0 0 auto;
+  width: 200px;
+  margin-right: 20px;
+}
+
+.arrow-left,
+.arrow-right {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  color: white;
+  font-size: 30px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.arrow-left {
+  left: 0;
+}
+
+.arrow-right {
+  right: 0;
+}
+
+@media (max-width: 600px) {
+  .similar-movie {
+    width: 150px;
+  }
+
+  .arrow-left,
+  .arrow-right {
+    font-size: 20px;
   }
 }
