--- a/search/search.css
+++ b/search/search.css
@@ -5,7 +5,7 @@
   background-color: black;
   position: fixed;
   top: 0;
-  z-index: 10; 
+  z-index: 10;
 }
 .navbar {
   display: flex;
@@ -185,7 +185,7 @@ h2 {
   display: flex;
   flex: 0 0 auto;
   text-align: center;
-  /* display: flex; */  /* flex를 두번하셨네요 */
+  /* display: flex; */ /* flex를 두번하셨네요 */
   justify-content: center;
   align-items: center;
 }
@@ -222,7 +222,7 @@ h2 {
   background-color: black;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   height: 100%;
   align-items: center;
   margin: 100px auto;
@@ -236,4 +236,55 @@ h2 {
 }
 .hidden {
   display: none;
+}
+
+/* Footer 스타일부분 */
+footer {
+  background-color: #000;
+  color: #888;
+  padding: 20px;
+  text-align: left;
+  margin-top: 30px;
+}
+
+.footer-top {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  gap: 15px;
+  margin-bottom: 15px;
+}
+
+.footer-top a {
+  color: #888;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer-top a:hover {
+  color: #fff; /* 마우스를 올릴 때 글자색을 흰색으로 변경 */
+}
+
+.footer-middle {
+  margin-bottom: 15px;
+  font-size: 14px;
+}
+
+.footer-bottom {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
+
+.social-icons {
+  display: flex;
+  gap: 15px;
+  margin-left: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.social-icons img {
+  width: 24px;
+  height: 24px;
 }
