--- a/recommendation/slide-feature.css
+++ b/recommendation/slide-feature.css
@@ -1,11 +1,22 @@
 body {
+  margin: 0;
   background-color: black;
-  color: white;
 }
 
-.popular-img {
+.logo {
+  text-decoration: none;
+  color: #e50914;
+  font-size: 2.5rem;
+  font-family: inherit;
+  font-weight: bold;
+  margin-top: 0px;
+  margin-right: 30px;
   position: relative;
-  max-height: 80vh;
+  top: -4px;
+}
+
+.movie-list-container{
+  margin-top: -120px;
 }
 
 .inner-title {
@@ -49,6 +60,10 @@ body {
   padding: 0 20px;
 }
 
+.movie-list-container h1 {
+  color: white;
+}
+
 .movie-list-wrapper {
   position: relative;
   overflow: hidden;
@@ -56,7 +71,9 @@ body {
 
 .popular-movie-list,
 .now-playing-movie-list,
-.trending-movie-list {
+.trending-movie-list,
+.upcoming-movie-list,
+.topRated-movie-list {
   display: flex;
   align-items: center;
   height: 300px;
@@ -71,17 +88,11 @@ body {
   transition: transform 1s ease;
 }
 
-/* .now-playing-movie-list {
-  margin-right: 30px;
-  position: absolute;
-  left: 0;
-  top: 200px;
-  transition: transform 1s ease;
-} */
-
 .movie-list-item:hover .movie-list-item-img {
   position: relative;
   bottom: 10px;
+  cursor: pointer;
+
 }
 
 .movie-list-item-img {
@@ -115,4 +126,15 @@ body {
 
 .movie-list-title {
   margin-top: 50px;
+  cursor: pointer;
+}
+
+
+
+/* 이희정님 파트 ccs 추가 */
+
+.main-movie-board {
+  display: flex;
+  justify-content: space-around;
+  /* margin-top: 50px;  */
 }
