--- a/detail/detail.css
+++ b/detail/detail.css
@@ -126,6 +126,14 @@ h1 {
   margin-bottom: 20px;
 }
 
+.similar-movies h2 {
+  text-align: left;
+}
+
+.videos h2 {
+  text-align: left;
+}
+
 #videoResults,
 #similarMovies,
 #movieReviews,
@@ -305,6 +313,11 @@ footer {
   .cast-member {
     width: 100%;
   }
+
+  .left,
+  .right {
+    width: 100%;
+  }
 }
 
 @media (max-width: 600px) {
@@ -373,7 +386,7 @@ footer {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 280px;
+  height: 300px;
 }
 
 .slider {
@@ -402,11 +415,11 @@ footer {
 }
 
 .arrow-left {
-  left: 0;
+  left: 10px;
 }
 
 .arrow-right {
-  right: 0;
+  right: 10px;
 }
 
 @media (max-width: 600px) {
@@ -439,6 +452,20 @@ footer {
   margin: 0 auto;
   position: relative;
 }
+
+.navbar_left {
+  display: flex;
+  align-items: center;
+}
+.icon-button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
 .logo {
   display: flex;
   align-items: center;
