design: 반응형 디자인 및 텍스트 오버플로우 처리 추가
- 글로벌 스타일 Noto sans 폰트 추가
- 상세, 찜목록 배경색 수정
- 반응형 레이아웃 및 이미지 비율 유지
- 텍스트 오버플로우 처리

--- a/globalStyle.css
+++ b/globalStyle.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
+
 /* 초기화 */
 * {
   margin: 0;
@@ -23,6 +25,10 @@ button {
 }
 
 body {
+  font-family: "Noto Sans KR", sans-serif !important;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   color: white;
   background-color: black;
 }
