--- a/detail/detail.css
+++ b/detail/detail.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Arial", sans-serif;
-  background-color: #333;
+  background-color: rgb(20, 20, 20);
   color: white;
 }
 
