design: 공통 스타일 적용 및 메인 헤더 레이아웃 조정
- 공통 스타일 적용(폰트, 스타일 초기화)
- 공통 스타일 적용으로 인해 메인페이지  헤더 안 요소 간격이 안맞아서 조정

--- a/detail/detail.css
+++ b/detail/detail.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Arial", sans-serif;
+  /* font-family: "Arial", sans-serif; */
   background-color: rgb(20, 20, 20);
   color: white;
 }
@@ -456,6 +456,7 @@ footer {
 .navbar_left {
   display: flex;
   align-items: center;
+  padding-left: 17px;
 }
 .icon-button {
   background: none;
