--- a/detail/detail.css
+++ b/detail/detail.css
@@ -157,6 +157,35 @@ h1 {
   text-align: center;
 }
 
+.similar-movie-list {
+  display: flex;
+  align-items: center;
+  height: 300px;
+  transform: translateX(0);
+  transition: all 1s ease-in-out;
+  position: relative;
+}
+
+.similar-movie-item {
+  margin-right: 30px;
+  position: relative;
+  transition: transform 1s ease;
+}
+
+.similar-movie-item:hover .similar-movie-item-img {
+  position: relative;
+  bottom: 10px;
+  cursor: pointer;
+}
+
+.similar-movie-item-img {
+  transition: all 1s ease-in-out;
+  width: 200px;
+  height: 270px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
 .similar-movie:hover {
   position: relative;
   bottom: 10px;
@@ -382,14 +411,13 @@ footer {
 }
 
 /* 슬라이드 스타일 */
-.slider-container {
+.movie-list-wrapper {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 300px;
 }
 
-.slider {
+.similar-movie-list {
   display: flex;
   transition: transform 0.5s ease-in-out;
   will-change: transform;
