--- a/search/search.css
+++ b/search/search.css
@@ -77,12 +77,12 @@ a.logo {
 }
 /* Search-box */
 .top-menu .search-box {
-  position: relative;
+  position: fixed;
   display: flex;
   justify-content: center;
-  top: 60px;
+  top: 0px;
   width: 100%;
-  height: 800px;
+  height: 100vh;
   background-color: black;
   flex-direction: column;
 }
@@ -92,7 +92,7 @@ a.logo {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 1100px;
+  width: 100%;
   height: 100px;
   background-color: black;
   margin: 0 auto;
@@ -113,10 +113,11 @@ a.logo {
 .inner-search {
   display: flex;
   align-items: center;
-  width: 200px;
+  width: 60%;
   margin: 0 auto;
 }
 #search-input {
+  width: 100%;
   display: flex;
   /* flex: 1; */
   justify-content: center;
@@ -176,13 +177,23 @@ h2 {
   margin: 10px;
   cursor: pointer;
 }
+/* 검색창 슬라이드 */
+#movie-search-board {
+  margin-top: 3em;
+  padding: 0 20px;
+}
 .swiper-container {
+  position: relative;
   width: 100%;
   overflow: hidden;
   display: flex;
 }
 .searchSlide {
   display: flex;
+}
+.swiper-button-prev,
+.swiper-button-next {
+  color: white;
 }
 
 /* Main */
@@ -266,8 +277,8 @@ footer {
     height: 100%;
   }
   .top-menu .search-box {
-    position: relative;
-    height: 600px;
+    /* position: relative; */
+    /* height: 600px; */
     width: 100%;
     padding: 5px;
   }
@@ -277,9 +288,10 @@ footer {
   }
   #search-input {
     font-size: 20px;
+    margin-left: 0;
   }
   .inner-search {
-    width: 600px;
+    /* width: 600px; */
     margin-bottom: 50px;
   }
   .closeBtn {
@@ -320,8 +332,8 @@ footer {
     font-size: 12px;
   }
   .top-menu .search-box {
-    position: relative;
-    height: 600px;
+    /* position: relative;
+    height: 600px; */
     width: 100%;
     padding: 5px;
   }
@@ -331,10 +343,9 @@ footer {
   }
   #search-input {
     font-size: 13px;
-    width: 200px;
   }
   .inner-search {
-    width: 300px;
+    width: 80%;
     margin-bottom: 50px;
   }
   .closeBtn {
