--- a/detail/detail.css
+++ b/detail/detail.css
@@ -410,46 +410,6 @@ footer {
   }
 }
 
-/* 슬라이드 스타일 */
-.movie-list-wrapper {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-}
-
-.similar-movie-list {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-  will-change: transform;
-}
-
-.similar-movie {
-  flex: 0 0 auto;
-  width: 200px;
-  margin-right: 20px;
-}
-
-.arrow-left,
-.arrow-right {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  border: none;
-  color: white;
-  font-size: 30px;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.arrow-left {
-  left: 10px;
-}
-
-.arrow-right {
-  right: 10px;
-}
-
 @media (max-width: 600px) {
   .similar-movie {
     width: 150px;
@@ -616,4 +576,43 @@ footer {
   border: none;
   font-size: 20px;
   margin-left: 10px;
+}
+
+/* 슬라이드 스타일 */
+.swiper-container {
+  width: 100%;
+  height: 300px;
+}
+
+.swiper-wrapper {
+  display: flex;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  width: 200px;
+  height: 300px;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: white; /* 화살표 색상 */
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 27px;
+  height: 44px;
+  z-index: 10;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
